# yretry

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: tests.yml
pyretries/: __init__.py  decorators.py  network.py
pyretries/tests/: test_decorators.py  test_network.py
yretry/: __init__.py  decorators.py  network.py
yretry/tests/: test_decorators.py  test_network.py
