[metadata]
name = pyretries
summary = Retries library
description-file =
    README.rst
author = NaaS Team
home-page = https://github.com/phantomii/pyretries
classifier =
    Environment :: Business
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    pyretries
    pyretries.tests

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
