[metadata]
name = yretry
summary = Retries library
description-file =
    README.rst
author = InfraGuys
home-page = https://github.com/infraguys/yretry
classifier =
    Environment :: Business
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages =
    yretry

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
